# Nexus.AI

./: .breakpoints  .env  IMGGEN.py  LICENSE.txt  README.md  app.py  class_economy.py  class_friend.py  code.py  cool_functions.py  logger.py  main.py  markdown.draw  pyproject.toml  replit.nix  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: issue-template.md
.gitignore/: .env  secrets.py
HelperAI/: app.py  cool_functions.py  main.py
data/: roast.json
